--- a/english/word/simple-word/markdown/p1-p2.md
+++ b/english/word/simple-word/markdown/p1-p2.md
@@ -34,7 +34,7 @@
     - 元头an，辅头a；不看字母看发音: an umbrella, a university, an hour, a house
 - and
     - conj. **和；然后**；那么；还
-    - The program has provided enough food and medicine.
+    - The program has provided enough food and medicine([ˈmedɪsn]).
     - That means going home for dinner and then working long.
 - in
     - prep. **在...里面**； adv. 在里面；
