--- a/english/word/simple-word/markdown/p15-p17.md
+++ b/english/word/simple-word/markdown/p15-p17.md
@@ -360,9 +360,9 @@
     - n. 内服药；医学
     - medic- 药物
     - 药物
-        - The program has provided enough food and medicine.
+        - The program has provided enough food and medicine([ˈmedɪsn]).
     - 医学
-        - Modern medicine has prolonged the physical([ˈfɪzɪkl]) agony([ˈæɡəni] n. 极度痛苦; 创痛) of dying.
+        - Modern medicine([ˈmedɪsn]) has prolonged the physical([ˈfɪzɪkl]) agony([ˈæɡəni] n. 极度痛苦; 创痛) of dying.
           现代医学延长了死亡的肉体痛苦
     - medical adj. 医疗的，药物的
 - party
