--- a/english/word/simple-word/markdown/p36-p38.md
+++ b/english/word/simple-word/markdown/p36-p38.md
@@ -63,7 +63,7 @@
 - pearl [pɜːrl]
     - n. 珍珠
     - pea- 豆子
-    - pearly adj. 珍珠的
+    - pearly [ˈpɜrli] adj. 珍珠的
 - instant
     - adj. 立即的，紧急的；速溶的
     - It <u>is</u> fully <u>capable of</u> being restored in an instant.
@@ -81,7 +81,7 @@
     - Dishonest person might be able to steal from someone else's accounts
     - steal - stole - stolen
     - stalk [stɔːk] v. 偷偷接近，跟踪
-- afraid
+- afraid [əˈfreɪd]
     - adj. 害怕的
     - be afraid of
 - mountain
@@ -93,7 +93,7 @@
     - adj. 附加的，添加的
 - dirty [ˈdɜːrti]
     - adj. 肮脏的，下流的，卑鄙的
-    - dirt
+    - dirt n. 污物; 灰尘，泥土; 松土; 丑闻; 狗屎
 - dance
 - inch [ɪntʃ]
     - n. 英寸
@@ -175,7 +175,7 @@
 - annually [ˈænjʊəlɪ]
     - adv. 一年一次地
     - ann- 年
-    - annual [ˈænjuəl]
+    - annual [ˈænjuəl] adj. 每年的; 一年一次的; 全年的
 - countryside
     - n. 农村
 - soup [suːp]
@@ -186,12 +186,13 @@
     - attract [əˈtrækt] v. **吸引**，使...喜爱
     - attractive adj. 有吸引力的，漂亮的
 - hopefully
+    - adv. 有希望地; 有前途地; 抱有希望地
 - foreigner
 - cute
     - adj. 漂亮迷人的; 有性吸引力的; 精明的
 - seemingly [ˈsiːmɪŋli]
     - adv. 表面上，看上去
-- warehouse
+- warehouse [ˈwerhaʊs]
     - n. 仓库，货栈
 - likelihood
     - n. 可能，可能性
@@ -223,8 +224,8 @@
     - 作者态度题为必错选项
 - fabric [ˈfæbrɪk]
     - n. 织物，织品；构造，结构
-    - social fabric == social structure 社会结构
-    - fabricate 编造
+    - social fabric == social structure([ˈstrʌktʃər]) 社会结构
+    - fabricate [ˈfæbrɪkeɪt] 编造
         - ...fabricate their date
 - hello
 - troop [truːp]
@@ -336,7 +337,7 @@
     - adj. 金制的；金色的
 - bacterial [bæk'tɪərɪrl]
     - adj. 细菌的
-    - The medicine is useful for bacterial infection.
+    - The medicine([ˈmedɪsn]) is useful for bacterial infection.
 - raw
     - adj. 生的，未加工的；无经验的
 - cup
