--- a/english/word/simple-word/markdown/p57-p58.md
+++ b/english/word/simple-word/markdown/p57-p58.md
@@ -2,7 +2,7 @@
 
 - fur
     - n. 皮毛
-    - no meat，no fur，no medicines
+    - no meat，no fur，no medicines([ˈmedɪsn])
 - grass
 - **inn**
     - n. 小旅馆，客栈
