--- a/english/word/simple-word/markdown/p9-p11.md
+++ b/english/word/simple-word/markdown/p9-p11.md
@@ -128,9 +128,9 @@
     - vi. 到达: We reach for them mindlessly([maɪndləsli] adv. 不费心思地; 愚蠢地).
     - n. 范围: expanded the reach of science([ˈsaɪəns] n. 科学; 技术).
 - remember
-- simply
-    - adv.
-    - simple adj.
+- simply [ˈsɪmpli]
+    - adv. 仅仅; 简朴地
+    - simple adj. 简单的; 单纯的; 朴素的
 - stand
     - vi. 站立；n. 立场 vt. 容忍
     - n. 立场: political stand
@@ -302,7 +302,7 @@
 - death
     - n. 死亡
     - die
-    - dying n. 濒临死亡: modern medicine has prolonged the physical agony([ˈæɡəni]) of dying.
+    - dying n. 濒临死亡: modern medicine([ˈmedɪsn]) has prolonged the physical agony([ˈæɡəni]) of dying.
 - doctor
     - n. 医生；博士
     - doc=duc 引导
