--- a/english/word/simple-word/markdown/p6-p8.md
+++ b/english/word/simple-word/markdown/p6-p8.md
@@ -3,10 +3,10 @@
 - late
     - adj. 迟的，晚的，末期的: People complained that buses were late.
     - adv. 在末期: in late April 2009
-    - adj. 已故的: The late psychologist Nalini Ambady.
+    - adj. 已故的: The late psychologist([saɪˈkɑːlədʒɪst] n. 心理学家) Nalini Ambady.
     - latter adj. 后者的 n. 后者
     - lately adv. 最近，不久前: Researchers lately have begun to extend(表达) that forecast.
-- future
+- future [ˈfjuːtʃər]
     - pl. 期货
 - why
 - price
@@ -19,7 +19,8 @@
     - prep. 在...之中(三者及以上): The money was distributed among four schools in the area.
 - food
 - cause
-    - n. 事业: being dedicated to a cause
+    - n. 事业；原因，理由 vt. 导致；使遭受
+    - being dedicated to a cause
     - because
 - early
 - group
@@ -27,22 +28,24 @@
     - interest group 利益集团
     - group dynamic 群体动力
 - house
-    - House 众议院 vs Senate [ˈsenət] 参议院: Legislation is moving through the House.
-    - vt. 给...房子住: The building has housed some of the nation's most significant diplomats...
+    - vt. 给...房子住
+    - House 众议院 vs Senate [ˈsenət] 参议院
+        - Legislation is moving through the House.
+    - The building has housed some of the nation's most significant diplomats...
 - build
     - built, built
     - building n.
 - small
 - try
-    - try to do 尝试做某事，尚未取得成功: try to wake up just enough to control <u>the course of bad dreams(
-      噩梦的发展过程、走向)</u>.
+    - try to do 尝试做某事，尚未取得成功
+        - try to wake up just enough to control <u>the course of bad dreams(噩梦的发展过程、走向)</u>.
 - city
 - better
     - good/well, better, best
-- choice
+- choice [tʃɔɪs]
     - n. 选择，抉择
-    - v. choose
-    - option
+    - choose [tʃuːz] v. 选择; 决定，甘愿
+    - option [ˈɑːpʃn] n. 选择; 选择权; 可选择的事物
 - parent
 - past
     - adj. 过去的: over the past decade
@@ -52,8 +55,8 @@
 - put
     - put, put, putting
     - as sb. put it 正如某人所说
-    - put forward 提出: Herbert Spencer put forward his own theory([ˈθiːəri] n. 学说; 理论) of biological and cultural
-      evolution.
+    - put forward 提出:
+        - Herbert Spencer put forward his own theory([ˈθiːəri] n. 学说; 理论) of biological and cultural evolution.
     - put down 记下，放下，归因于
         - Danny put down his glass.
         - The former has been put down to social effects.
@@ -67,54 +70,64 @@
     - mass medium/media 大众传媒
 - once
     - adv. 一次: to login just once
-    - adv. 曾经(与过去时连用): My favorite actor Will Smith once said...
-    - conj. 一旦...: You should never give up once you start.
+    - adv. 曾经(与过去时连用)
+        - My favorite actor Will Smith once said...
+    - conj. 一旦...
+        - You should never give up once you start.
 - bring
     - bring, brought, brought
 - ask
-    - vi. 请求(for): He was so busy that he had to ask for help.
-    - vt. 要求: All the students were asked to complete a questionnaire.
+    - vi. 请求(for)
+        - He was so busy that he had to ask for help.
+    - vt. 要求
+        - All the students were asked to complete a questionnaire.
 - three
 - below
 - book
-    - vt. 预定: It will not fear of booking losses([lɔːs] n. 损失).
+    - vt. 预定
+        - It will not fear of booking losses([lɔːs] n. 损失).
 - selfish
     - adj. 自私的，利己的
 - spend
 - animal
 - least
-    - little 最高级
     - adj. 最小的
+    - little 最高级
 - skill
     - skilled adj. 熟练的
         - be skilled at 熟练于
 - always
 - lose [luːz]
     - lost, lost, losing
-    - lose sleep 对...焦虑: One more reason not to lose sleep over the rise in oil prices.
-    - lose concentration 走神: lose concentration on the driving
-    - loss n. (class, chess, boss) 丧失，损失
-    - loser n. 败者，输者
+    - lose sleep 对...焦虑
+        - One more reason not to lose sleep over the rise in oil prices.
+    - lose concentration 走神
+        - lose concentration on the driving
+    - loss [lɔːs] n. (class, chess, boss) 丧失，损失
+    - loser [ˈluzɚ] n. 败者，输者
 - role
-    - play a role in 在...方面: Foreign bureaus(外国办事处) play a crucial([ˈkruːʃl] adj. 至关重要的，关键性的) role in
-      the newspaper business.
+    - play a role in 在...方面
+        - Foreign bureaus(外国办事处) play a crucial([ˈkruːʃl] adj. 至关重要的，关键性的) role in the newspaper business.
 - college
 - essay
-    - n. 散文: Write an essay of 160-200 words based on the following drawing.
+    - n. 散文
+        - Write an essay of 160-200 words based on the following drawing.
 - person
     - a person, two persons
 - whatever
 - computer
-    - compute v. 计算: The losses were computed at $5 million.
+    - compute v. 计算:
+        - The losses were computed at $5 million.
 - down
-    - adj. 沮丧的: without feeling guilty and without letting the other participants down.
+    - adj. 沮丧的
+        - without feeling guilty and without letting the other participants down.
 - hard
     - adj./adv. 坚硬的，坚实的: but have no hard scientific proof.
     - **adj./adv. 困难的**: Getting established([ɪˈstæblɪʃ] v. 创建) is harder for the young.
     - **adj./adv. 努力的**: Everyone should try hand to promote social justice.
     - adj./adv. 猛烈的: But because hard laughter is difficult to maintain...
 - play
-    - n. 竞争: That once could count on(依赖，指望) hard work and fair play.
+    - n. 竞争: That once could <u>count on(依赖，指望)</u> hard work and fair play.
     - n. 戏剧: musical play
 - themselves
 - translation
@@ -122,19 +135,19 @@
     - translate
 - area
 - paper
-    - newspaper 报纸
     - n. 纸(不可数)
     - **n. 论文(可数)**
+    - newspaper 报纸
 - allow
     - allow sb. to do sth. 让某人去做某事: This allows us to think on way and act another.
-    - allowance n. 补贴，津贴
+    - allowance [əˈlaʊəns] n. 补贴，津贴
 - open
     - openly adv. 公开的
     - openness n. 率真，坦率
 - **though** [ðoʊ]
     - conj. 尽管，虽然(在主句前补充“但是”): Though it is sunny, it is cold.
-        - although conj. 尽管，虽然
     - adv. 可是，然而(只用于句末，使用逗号隔开): Such programs do not have to negatively affect the environment, though.
+    - although conj. 尽管，虽然
 - under
 - name
     - vt. 提名: The likelihood of being named also increases.
@@ -142,8 +155,10 @@
     - n. 课程(一节课，course 一门课, curriculum [kəˈrɪkjələm] 完整课程体系)
     - **n. 阶级，等级**: social class, middle class
     - **v. 分等级**: It can hardly be classed as Literature([ˈlɪtrətʃər] n. 文学; 著作).
-    - classic adj. 典型的 n. 典型: a classic case of "paralysis by analysis([əˈnæləsɪs])"
-    - classical adj. 经典的，古典的: It has been the talk of the classical-music world.
+    - classic adj. 典型的 n. 典型
+        - a classic case of "paralysis by analysis([əˈnæləsɪs])"
+    - classical adj. 经典的，古典的
+        - It has been the talk of the classical-music world.
 - low
 - face
     - vt. 面对: All of these countries face their own challenges...
@@ -163,7 +178,7 @@
         - talk to/with sb.
     - say v. 及物动词
     - talkative adj. 多嘴的，爱多说话的(消极的)
-        - articulate [ɑːrˈtɪkjuleɪt] adj. 善于表达的(积极的)
+    - articulate [ɑːrˈtɪkjuleɪt] adj. 善于表达的(积极的)
     - talker n. 说话的人
 - win
 - happen
@@ -177,22 +192,23 @@
     - v. (使)联合，团结: United we stand, divided we fall.
 - enough
     - 前面+adj.后面+n.(前行候命): enough food,
-        - The program has provided enough food and medicine...
-        - Renewable energy is not competitive enough.
+    - The program has provided enough food and medicine([ˈmedɪsn])...
+    - Renewable energy is not competitive enough.
 - list
     - n.: from the list A-G.
     - vt. 列举: listing its long-run effects
 - translate
-- adult
+- adult [əˈdʌlt]
 - buy
     - bought, bought
 - draw
     - vt. 拖，拉:
     - vt. 吸引（注意等）
-        - draw attention to 关注: They want to use their wealth(财富) to draw attention to those who have successes in science([ˈsaɪəns]).
+        - draw attention to 关注
+        - They want to use their wealth(财富) to draw attention to those who have successes in science([ˈsaɪəns]).
 - easy
     - adj. 安逸的
-        - uneasy 不安
+    - uneasy 不安
 - goal
 - never
 - period [ˈpɪriəd]
@@ -204,15 +220,17 @@
     - take care of 照顾，照料: It's the hardest thing to take care of a teenage.
     - care about/for 关心: We both care about/for needy workers.
     - medical care 医疗保健
-    - careful, carefully,
+    - careful
+    - carefully
     - careless adj. 漠不关心的
 - close
     - adj. 亲密的，亲近的: Helping you feel close and connected to people you care about... 帮助您与所关心的人建立亲密联系...
     - closely adv. 接近地
 - complete
     - vt.: IQ tests ask you to complete verbal and visual analogies(类比). 智力测试要求你完成语言和视觉类比
-    - adj. 完整的，完成的: But the intention is not to neglect social science([ˈsaɪəns]); rather, the complete opposite.
-      但我们的意图并不是忽视社会科学，而是完全相反。
+    - adj. 完整的，完成的
+        - But the intention is not to neglect social science([ˈsaɪəns]); rather, the complete opposite.
+          但我们的意图并不是忽视社会科学，而是完全相反。
 - decade
     - n. 十年
     - the better part of a decade 七八年
@@ -222,9 +240,10 @@
 - modern
 - my
 - theory [ˈθiːəri]
+    - n. 学说，论；说
     - theme + story
-    - n.: There are no good theories explaining what consciousness(意识) actually is and how you could ever build a
-      machine to ge there.
+    - There are no good theories explaining what consciousness(意识) actually is and how you could ever build a machine
+      to ge there.
 - friend
 - letter
 - machine [məˈʃiːn]
@@ -241,15 +260,17 @@
 - brain
     - n. 脑，脑袋
     - n. 人才
-        - brain drain 人才流失: This "brain drain(下水道)" has long bothered policymaker in poor country.
+    - brain drain 人才流失:
+        - This "brain drain(下水道)" has long bothered policymaker in poor country.
 - population
     - n. 人口: The Global population predicted to hit close to 10 billion by 2050...
 - game
     - n. 猎物: The large, slow-growing animals were easy game...
 - him
 - almost
+    - adv. 几乎:
     - all + most
-    - adv. 几乎: I have also almost lost my taste for pictures or music.
+    - I have also almost lost my taste for pictures or music.
 - drive
     - vt. 驱赶，迫使: This movement, driven by powerful and diverse motivations,...
     - n. 推动力: Science's overall drive to increase reproducibility in the research...
@@ -259,45 +280,47 @@
     - n. 标题，头衔
     - entitle v. 使享有权利，给...命名
         - write an essay entitled "Cultures National and International"
-        - be entitle to 有资格...: They are entitled be continuance.
+        - be entitle to 有资格...
+            - They are entitled be continuance.
 - car
-- fashion
+- fashion [ˈfæʃn]
     - v. 制定，实行: Congress should help to begin fashioning conservation measures[ˈmeʒər].
 - level
     - n. 水平
     - basic level 基准
     - high/low level
-    - **on one level, ...on another level, ...一方面，...另一方面，...**
-    - **level out/off 保持稳定**: It levels out for a period of time
+    - **on one level, ...on another level ...一方面，...另一方面...**
+    - **level out/off 保持稳定**:
+        - It levels out for a period of time
 - news
 - ever
     - adv. 在任何时候(**永远**): We are never, ever getting back together.
-    - adv. 从来（**曾**）: Have you ever notices how many children laugh?
+    - adv. 从来（**曾**）: Have you ever notices how many children laugh([læf])?
     - adv. 在任何时候(**一直**): ...an ever-growing number of both domestic and international consumers.
-        - an ever-growing number of 越来越多的 + 可数n.
-            - an ever-growing amount of 越来越多的 + 不可数n.
+        - an ever-growing *number* of 越来越多的 + 可数n.
+        - an ever-growing *amount* of 越来越多的 + 不可数n.
         - **(a/an + n.单/)n.复 of B: 一些，一系列地**
             - a lot of
             - a dozen of
             - a chunk of
             - a succession of
-- generally
+- generally [ˈdʒenrəli]
     - adv. 普遍地
-    - general
+    - general [ˈdʒenrəl]
 - half
 - art
     - n. 技术
-    - pl. arts 文科: ...with the arts and sciences([ˈsaɪəns]) flourishing(繁荣)...
+    - pl. arts 文科
+        - ...with the arts and sciences([ˈsaɪəns]) flourishing(繁荣)...
 - body
     - n. 主体
 - eye
 - lot
     - lots of
     - a lot of
-- sentence
+- sentence [ˈsentəns]
     - n. 句子，判决
-    - vt. 宣判，判决: He had already sentenced five or six other defendants(被告) only to forced community service on
-      that day.
+    - vt. 宣判，判决: He had already sentenced five or six other defendants(被告) only to forced community service on that day.
 - recent
     - adj.: This is why repeated measures(措施, [ˈmeʒər]) have failed in recent years.
     - recently adv. 最近
@@ -307,5 +330,6 @@
     - secondary adj. 次要的，（教育，学校等）中等的
         - secondary school 中学
 - blank
+    - adj. 面无表情的
     - Choose the best word(s) for each numbered blank...
-    - adj. 面无表情的: Those faces are blank and unresponsive...
+    - Those faces are blank and unresponsive...
