--- a/math/latex/template.tex
+++ b/math/latex/template.tex
@@ -28,10 +28,10 @@
 % =========================
 \begin{document}
 
-%    \title{线性代数}
-%    \author{Bowen}
-%    \date{\today}
-%    \maketitle
+    \title{Template}
+    \author{Bowen}
+    \date{\today}
+    \maketitle
 
 % =========================
 
