--- a/math/linear_algebra/matrix.tex
+++ b/math/linear_algebra/matrix.tex
@@ -241,7 +241,7 @@
         \item $(ABC)^{-1} = C^{-1}B^{-1}A^{-1}$
         \item $(A^n)^{-1} = (A^{-1})^n$
         \item $(A^{-1})^T = (A^T)^{-1}$
-        \item $|A^{-1}| = \frac{1}{|A|}$
+        \item $|A^{-1}| = \frac{1}{|A|} \Rightarrow |p^{-1}||P| = 1$
         \item $A^{-1} = \frac{1}{|A|}A^{*}$
     \end{enumerate}
 
