--- a/english/word/simple-word/markdown/p27-p29.md
+++ b/english/word/simple-word/markdown/p27-p29.md
@@ -24,8 +24,8 @@
     - n. **鉴赏力；品味**；味道 vt. 品尝
     - 品味
         - He has an expensive taste of lifestyle.
-    - distasteful adj. 令人讨厌的，令人厌恶的
-        - Accepting favors in return for opening doors is "distasteful".
+    - distasteful [dɪsˈtestfəl] adj. 令人讨厌的，令人厌恶的
+        - Accepting favors in return for opening doors is "distasteful([dɪsˈtestfəl] 令人厌恶的)".
 - via [ˈviːə]
     - prep. 经由 == by
     - The current immigration(移民) system in the US has been fixed via political means(方法).
