--- a/english/word/simple-word/markdown/p42-p44.md
+++ b/english/word/simple-word/markdown/p42-p44.md
@@ -10,6 +10,7 @@
     - n. 医院治疗
 - scream
     - vi. 尖叫声； n. 尖叫
+    - cream n. **精华**；奶油
 - steward/stewardess  [ˈstuːərd]  [ˌstjuːəˈdes]
     - n. **男乘务员/女乘务员**；管家
     - to serve as responsible stewards of the planet(行星).
@@ -66,6 +67,7 @@
     - impossible
 - grassland [ˈɡræslænd]
     - n. 草原；草地
+    - grass n. 草，青草; 草地，草坪
 - spray [spreɪ]
     - v. 喷； n. 浪花，水花
 - prey [preɪ]
@@ -88,6 +90,7 @@
     - n. 坟墓
 - painting [ˈpeɪntɪŋ]
     - n. 绘画; 油画;
+    - painter [ˈpeɪntər] n. 画家；油漆匠
 - equity [ˈekwəti]
     - n. 资产净值; 公平，公正
 - handsome
@@ -105,7 +108,7 @@
 - superstar
 - nightmare [ˈnaɪtmer]
     - n. 噩梦；可怕的事物
-- purse  [pɜːrs]
+- purse [pɜːrs]
     - n. 钱包（女用）
     - 一个 nurse，丢了 purse
 - jacket
@@ -144,6 +147,8 @@
 - thirteen
 - dentist
     - n. 牙医
+    - dental [ˈdentl] adj. 牙齿的，牙科的
+    - dentistry n. 牙科学
 - naive [naɪˈiːv]
     - adj. 幼稚的，天真的
 - limb
@@ -209,6 +214,7 @@
     - n. 笼子
 - newsprint [ˈnuzprɪnt]
     - n. 新闻纸；白报纸
+    - newsstand n. 报摊，杂志摊
 - shoe [ʃuː]
     - n. 鞋
     - Put yourself in others' shoes. 站在别人立场
@@ -235,6 +241,7 @@
     - n. 吃...的人
 - smoker
 - oneself
+    - 自己，亲自
 - Tuesday
 - weapon [ˈwepən]
     - n. 武器，并且
@@ -279,6 +286,7 @@
     - professional 职业的
 - textual [ˈtekstʃuəl]
     - adj. 文本的，篇章的
+    - textile [ˈtekstaɪl] n. 纺织品；纺织业（pl.）
 - biology
     - n. 生物学
 - fourteen
@@ -292,6 +300,7 @@
     - vt. 原谅；宽恕
 - groundless
     - adj. 无理由的，无根据的
+    - ground n. **根据，依据**；地面；土地
 - zeal [ziːl]
     - n. 热心，热情
     - jealous [ˈdʒeləs] adj. 嫉妒的
