--- a/english/word/simple-word/markdown/p9-p11.md
+++ b/english/word/simple-word/markdown/p9-p11.md
@@ -14,7 +14,7 @@
 - return
     - vi. 返回；
     - n. 返回，归还
-        - Accepting favors <u>in return for</u> opening doors is "distasteful"(令人厌恶的).
+        - Accepting favors <u>in return for</u> opening doors is "distasteful([dɪsˈtestfəl] 令人厌恶的)".
             - in return for 作为对...的回报
     - vi. 恢复
         - Train services have returned to normal after the strike of the flu(流感).
@@ -37,8 +37,8 @@
 - poor
     - adj. 贫乏的
         - People are, on the whole, poor at considering protecting the environment. 总体而言，人们对保护环境的考虑还不够
-        - on the whole 总体而言（插入语）
-        - **poor at considering**在某个方面贫乏考虑
+            - on the whole 总体而言（插入语）
+            - **poor at considering**在某个方面贫乏考虑
     - poorly adv. 糟糕地，不如意
 - actual
     - adj. 实际的
@@ -51,12 +51,12 @@
 - picture
     - n. 图片，照片；局面
     - pic- 描绘
-    - depict v.描绘
+    - depict v. 描绘
     - 图片
-        - describe the pictures briefly(简短的)
+        - describe the pictures briefly([ˈbriːfli] 简短的)
     - 局面
         - For younger families，the picture is not any better.
-    - vt.拍照
+    - vt. 拍照
         - The overweight are sometimes pictured in the media with their faces covered.
 - run
     - vt. 经营，管理，运行
@@ -101,9 +101,10 @@
     - gap year
 - journal [ˈdʒɜːrnl]
     - n. 杂志，期刊
+    - journalist [ˈdʒɜːrnəlɪst] n. 记者
     - j 记 + our 我们 + nal 哪里
 - neatly [ˈnitlɪ]
-    - adv. 整洁的，干净的:
+    - adv. 整洁地，干净地:
         - You should write neatly on the ANSWER SHEET.
     - neat adj.整洁的
 - next
@@ -123,7 +124,7 @@
 - middle
 - outside
 - reach
-    - vt.到达，抵达; vi.伸出手；达到，延伸；
+    - vt. 到达，抵达; vi.伸出手；达到，延伸；
     - vt. 触达: Influential([ˌɪnfluˈenʃl] n. 有影响力的人物) have more channels to reach the public(公众).
     - vi. 到达: We reach for them mindlessly([maɪndləsli] adv. 不费心思地; 愚蠢地).
     - n. 范围: expanded the reach of science([ˈsaɪəns] n. 科学; 技术).
@@ -182,6 +183,7 @@
     - n. 将军
     - in general 一般而言
         - <u>In general</u>, nearly all the students feel good about the class.
+    - generally [ˈdʒenrəli] adv. 普遍地
 - together
     - gather n./v. 聚集，集合: They gather all the data the can. 他们收集了所有能收集到的数据
 - underline
@@ -190,11 +192,11 @@
 - record
     - n. 记录 v. 记录；录音
     - re-一再 cord 心
-    - n.记录
+    - n. 记录
         - a company's record in CSR
-    - v.记录
+    - v. 记录
         - ...record sales on a cash register
-    - accord v. 自愿；一致；符合
+    - accord [əˈkɔːrd] v. 自愿；一致；符合
 - everyone
 - land
     - n. 陆地
@@ -212,7 +214,7 @@
 - robot
 - drug [drʌɡ]
     - n. 药物
-    - n. 毒品, 与 alcohol(酒精)/tobacco(烟草) 连用
+    - n. 毒品, 与 alcohol([ˈælkəhɔːl] 酒精)/tobacco([təˈbækoʊ] 烟草) 连用
         - Many homeless adults <u>are addicted([əˈdɪktɪd]) to</u> alcohol or drug.
             - be addicted to 对...上瘾
 - event
@@ -227,10 +229,10 @@
     - Give me a lever and I will lever the earth.
     - lev-举；轻
 - model
-    - n.模特；模型
+    - n. 模特；模型
     - He turned from a problem child into a model student.
 - receive
-    - vt.接收，收到；接见
+    - vt. 接收，收到；接见
     - ceive-拿；抓
         - deceive 欺骗
         - perceive 察觉；理解
@@ -247,8 +249,8 @@
 - user
 - practice/practise
     - n. 实践；行为；练习
-        - 行为
-            - This practice does not address the real worry.
+    - 行为
+        - This practice does not address the real worry.
 - fear
     - n. 恐惧
     - vt. 害怕: They fear losing control of Mauna Kea.
@@ -256,6 +258,7 @@
     - adj. 外国的
     - fore-门
     - foreigner n. 外国人
+    - alien [ˈeɪliən] adj. 外国的；**外国人的**；陌生的 n. **外国人**，外星人
 - within
     - prep. 在（某段距离）之间，在（某段时间）之内
     - 同 in
@@ -274,6 +277,7 @@
         - We can <u>take a moment</u> before buying.
 - nearly
     - adv. 几乎，差不多
+    - nearby adj. 附近的； adv. 在附近
 - nothing
     - What is there on the desk? Nothing.
 - oil
@@ -331,7 +335,7 @@
     - adj. 合理的，健全的: The court's([kɔːrt]) ruling is legally([ˈliɡlɪ]) sound. 法院的裁决在法律上是合理的
 - sport
 - television/TV
-    - n.电视机
+    - n. 电视机
     - tele-电
     - vis-看
 - therefore
@@ -343,16 +347,16 @@
     - adj. 全部的，全体的，完整的
     - n. 全部，全体
     - wholesale n. 批发
-    - holy adj.神圣的
+    - holy adj. 神圣的
 - across
     - prep. 穿过，在...对面 adv. 横过
-        - It helps spread Hawaiian culture across the world.
+    - It helps spread Hawaiian culture across the world.
     - cross v.穿过
         - Look left and right before you cross the road.
 - actually
 - billion
 - else
-    - adv.其他，另外
+    - adv. 其他，另外
     - 只能放在不定代词(sb./anybody/anyone)和特殊疑问词后: Everybody else loses.
 - hear
     - vt. 听见；听说
@@ -369,12 +373,12 @@
     - 关键
         - The key to reforming（改革）higher education...
     - 输入，键入
-        - ...lets visitors key in job criteria（工作标准）
+        - ...lets visitors key in job criteria([kraɪ'tɪriə] 工作标准)
 - material
-    - n.材料；原料； adj.物质的；重要的；实质性的
-    - n.材料；原料
+    - n. 材料；原料； adj. 物质的；重要的；实质性的
+    - n. 材料；原料
         - They were built with materials popular at that time.它们是用当时流行的材料建造的
-    - adj.物质的
+    - adj. 物质的
         - satisfaction([ˌsætɪsˈfækʃn]) with these material purchases([ˈpɜːrtʃəs]) wears off fairly quickly.
             - wear off 逐渐消失；消散
     - pattern [ˈpætərn] 模式
@@ -382,14 +386,14 @@
 - shop
 - slow
 - either
-    - adj. （两者之中）任一的，每一的。修饰单数名词: Either classmate should get respect.
+    - adj. (两者之中)任一的，每一的。修饰单数名词: Either classmate should get respect.
     - adv. 也（用于否定句中）: I don't know either.
         - also 用于肯定句中
-    - prep. （两者之中）任何一个: You may take either of the two.
+    - prep. (两者之中)任何一个: You may take either of the two.
         - neither 两者都不
 - mother
 - surprise
     - prise-抓
-        - prison 监狱
+        - prison [ˈprɪzn] 监狱
     - surprisingly adv. 惊人地
 - writer
