feat: add compare tool

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -11,11 +11,11 @@
 
 Dear Bob,<br>
 &emsp;&emsp;&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write
-a letter to you to thank you for your warm reception in the cultural exchange program. You and your family left a deep
-impression upon me. Indeed, the program is one of the most wonderful memories in my life.<br>
-&emsp;&emsp;&emsp;&emsp;I remember you mentioned wanting to travel in China. Well, if you come to China, You will be
-warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the
-places you would like to visit.<br>
+a letter to you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left
+a deep impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
+&emsp;&emsp;&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, You
+will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand
+of the places you would like to visit.<br>
 &emsp;&emsp;&emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
 <p align="right">Zhang Wei</p>
@@ -41,11 +41,11 @@ Dear Sir or Madam,<br>
 &emsp;&emsp;&emsp;&emsp;I bought an electronic dictionary from your online shore on January 1st, but after using it for
 a short period of time, I found it has some problems.<br>
 &emsp;&emsp;&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need
-to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small
-that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
-&emsp;&emsp;&emsp;&emsp;Therefore, I would like either to change for another model that works better or a full refund.
-Your help is greatly appreciated.<br>
-<p align="right">Yours sincerely</p>
+to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary **are** so
+small that it is nearly impossible to type anything with them. Personally, I find **this to be completely unacceptable**.<br>
+&emsp;&emsp;&emsp;&emsp;Therefore, I would like **either to change for** another model that works better or a full
+refund. Your help is greatly appreciated.<br>
+<p align="right">**Yours** sincerely</p>
 <p align="right">Zhang Wei</p>
 
 ## 005
@@ -141,8 +141,13 @@ leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking 
 
 Dear Paul,<br>
 &emsp;&emsp;&emsp;&emsp;I'm extremely happy to learn you are coming to China! Here are my recommendations.<br>
-&emsp;&emsp;&emsp;&emsp;Since it's the first time you visit China. I highly recommend Beijing, the capital of China. Beijing is a city in the northern part of China. As a center of politics, culture, international communication, and scientific and technological innovation, Beijing attracts talent from all over the country, displaying China's development to the world.<br>
-&emsp;&emsp;&emsp;&emsp;As for tourist attractions, I suggest you visit the Imperial Palace, the Great Wall and the Summer Palace, all of which have been listed on the UN's World Heritage List. It is true that Beijing, once an ancient imperial city, is now a genuine metropolis. Looking forward to meeting you in Beijing.<br>
+&emsp;&emsp;&emsp;&emsp;Since it's the first time you visit China. I highly recommend Beijing, the capital of China.
+Beijing is a city in the northern part of China. As a center of politics, culture, international communication, and
+scientific and technological innovation, Beijing attracts talent from all over the country, displaying China's
+development to the world.<br>
+&emsp;&emsp;&emsp;&emsp;As for tourist attractions, I suggest you visit the Imperial Palace, the Great Wall and the
+Summer Palace, all of which have been listed on the UN's World Heritage List. It is true that Beijing, once an ancient
+imperial city, is now a genuine metropolis. Looking forward to meeting you in Beijing.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
@@ -150,9 +155,16 @@ Dear Paul,<br>
 ## 012
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;Thank you for your congratulations! In September, I'm going to pursue my master's degree in Peking University, one of the top two universities in China.<br>
-&emsp;&emsp;&emsp;&emsp;Established in 1898, Peking University was originally founded as the Imperial University of Peking-the first national comprehensive university in modern China. For over a century, she had contributed to the development of China and the change of the destiny of its people. As China's leading higher education institution for teaching and researching, Peking University enjoys an excellent academic reputation, attracting top scholars and students from China and all over the world.<br>
-&emsp;&emsp;&emsp;&emsp;As for your application to a Chinese university, I suggest Peking University and Tsinghua University as your best choices. Your resume and application letter play a vital role in application. Looking forward to your reply.<br>
+&emsp;&emsp;&emsp;&emsp;Thank you for your congratulations! In September, I'm going to pursue my master's degree in
+Peking University, one of the top two universities in China.<br>
+&emsp;&emsp;&emsp;&emsp;Established in 1898, Peking University was originally founded as the Imperial University of
+Peking-the first national comprehensive university in modern China. For over a century, she had contributed to the
+development of China and the change of the destiny of its people. As China's leading higher education institution for
+teaching and researching, Peking University enjoys an excellent academic reputation, attracting top scholars and
+students from China and all over the world.<br>
+&emsp;&emsp;&emsp;&emsp;As for your application to a Chinese university, I suggest Peking University and Tsinghua
+University as your best choices. Your resume and application letter play a vital role in application. Looking forward to
+your reply.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
@@ -160,8 +172,14 @@ Dear Paul,<br>
 ## 013
 
 Dear friends,<br>
-&emsp;&emsp;&emsp;&emsp;I am writing the email to recommend one of the most prestigious Chinese celebrities to you, Confucius.<br>
-&emsp;&emsp;&emsp;&emsp;First of all, being a great thinker, educator and founder of Confucianism, Confucius is an ancient sage during the Spring and Autumn Period. In addition, his words and life story were recorded by his disciples and their student in *The Analects*. As an enduring classic of ancient Chinese culture, *The Analects* has influenced all thinkers, writers and politicians in the over-2000-year-long history of China after Confucius. Finally, much of Confucian thought still remains the interest of not only the Chinese people but also people in other parts of the world.<br>
+&emsp;&emsp;&emsp;&emsp;I am writing the email to recommend one of the most prestigious Chinese celebrities to you,
+Confucius.<br>
+&emsp;&emsp;&emsp;&emsp;First of all, being a great thinker, educator and founder of Confucianism, Confucius is an
+ancient sage during the Spring and Autumn Period. In addition, his words and life story were recorded by his disciples
+and their student in *The Analects*. As an enduring classic of ancient Chinese culture, *The Analects* has influenced
+all thinkers, writers and politicians in the over-2000-year-long history of China after Confucius. Finally, much of
+Confucian thought still remains the interest of not only the Chinese people but also people in other parts of the
+world.<br>
 &emsp;&emsp;&emsp;&emsp;If you have any questions about Confucius, please feel free to contact me.<br>
 
 <p align="right">Yours sincerely,</p>
@@ -171,8 +189,13 @@ Dear friends,<br>
 
 Dear friends,<br>
 &emsp;&emsp;&emsp;&emsp;On behalf of Class 3, I warmly welcome you to attend the Dragon Boat Festival celebration.<br>
-&emsp;&emsp;&emsp;&emsp;The Dragon Boat Festival, falling on the 5th of the fifth lunar month, is a traditional Chinese holiday for family members to gather together. Aside from enjoying the dragon boat racing, Chinese people also eat the traditional food of the festival-zongzi. Considering that some students cannot be reunited with their families this year, our class decides to hold this celebration to make everyone feel the love and friendship on this special day.<br>
-&emsp;&emsp;&emsp;&emsp;If you are interested in participating in thie celebration, please fill in your personal information on the school's website at www.bfsu.edu.cn. The activity will be held in the Auditorium from 10:00 a.m. to 4:00 p.m. on June 12th.<br>
+&emsp;&emsp;&emsp;&emsp;The Dragon Boat Festival, falling on the 5th of the fifth lunar month, is a traditional Chinese
+holiday for family members to gather together. Aside from enjoying the dragon boat racing, Chinese people also eat the
+traditional food of the festival-zongzi. Considering that some students cannot be reunited with their families this
+year, our class decides to hold this celebration to make everyone feel the love and friendship on this special day.<br>
+&emsp;&emsp;&emsp;&emsp;If you are interested in participating in this celebration, please fill in your personal
+information on the school's website at www.bfsu.edu.cn. The activity will be held in the Auditorium from 10:00 a.m. to
+4:00 p.m. on June 12th.<br>
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -180,9 +203,13 @@ Dear friends,<br>
 ## 015
 
 Dear Mr. Snakespeare,<br>
-&emsp;&emsp;&emsp;&emsp;I am writing to express my heartfelt gratitude. I am referring to that unfortunate accident the other day, when I was knocked off my bike by a taxi.<br>
-&emsp;&emsp;&emsp;&emsp;If it had not been for your timely assistance in giving me first aid, I fear that the consequences might have been very serious. Everyone agrees that it is your quick-witted response in that emergency that had led to this satisfactory outcome.
-&emsp;&emsp;&emsp;&emsp;Although nowadays people in mounting numbers talk about the need to be unselfish, we see very few people practise what they preach. If there were more people like you, this world would be a much nicer place.<br>
+&emsp;&emsp;&emsp;&emsp;I am writing to express my heartfelt gratitude. I am referring to that unfortunate accident the
+other day, when I was knocked off my bike by a taxi.<br>
+&emsp;&emsp;&emsp;&emsp;If it had not been for your timely assistance in giving me first aid, I fear that the
+consequences might have been very serious. Everyone agrees that it is your quick-witted response in that emergency that
+had led to this satisfactory outcome.
+&emsp;&emsp;&emsp;&emsp;Although nowadays people in mounting numbers talk about the need to be unselfish, we see very
+few people practise what they preach. If there were more people like you, this world would be a much nicer place.<br>
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -190,11 +217,16 @@ Dear Mr. Snakespeare,<br>
 ## 016
 
 Dear Sir or Madam,<br>
-&emsp;&emsp;&emsp;&emsp;I am sorry to say that I will not be able to attend the interview at 10:00 a.m. on Monday, December 15, 2025.<br>
-&emsp;&emsp;&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require surgery on the same day as our interview. If passible, I woule like to postpone the interview to another day later in the week. I promise that such a situation does not usually happen, and apologize for any inconvenience this may cause you.<br>
-&emsp;&emsp;&emsp;&emsp;I am looking forward to hearing from you and, again, am sorry for any trouble this may have caused. Please excuse me for not being able to inform you of my situation sooner.<br>
+&emsp;&emsp;&emsp;&emsp;I am sorry to say that I will not be able to attend the interview at 10:00 a.m. on Monday,
+December 15, 2025.<br>
+&emsp;&emsp;&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require
+surgery on the same day as our interview. If possible, I would like to postpone the interview to another day later in
+the week. I promise that such a situation does not usually happen, and apologize for any inconvenience this may cause
+you.<br>
+&emsp;&emsp;&emsp;&emsp;I am looking forward to hearing from you and, again, am sorry for any trouble this may have
+caused. Please excuse me for not being able to inform you of my situation sooner.<br>
 
-<p align="right">Yoursincerely,</p>
+<p align="right">Your sincerely,</p>
 <p align="right">Li Ming</p>
 
 <p align="right"></p>
