--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -11,12 +11,12 @@
             - A instead of B == A rather than B 是A而不是B（选择前边而不选择后边）
 - forest [ˈfɔːrɪst]
     - n. 森林
+    - forecast [ˈfɔːrkæst] n./v. 预测，预料
 - immediate [ɪˈmiːdiət]
     - adj. 立即的，即刻的；直接的；紧靠的
     - medi- 中间的
     - 立即的，马上的
-        - Because electronic payments(电子支付) are immediate，they eliminate([ɪˈlɪmɪneɪt] v.消除) the float for the
-          consumer.
+        - Because electronic payments(电子支付) are immediate，they eliminate([ɪˈlɪmɪneɪt] v.消除) the float for the consumer.
     - 直接的
         - Interest rates have an immediate effect on the economy([ɪˈkɑːnəmi] 经济).
 - sell
@@ -58,7 +58,7 @@
 - smile
     - n. 微笑
     - grin 漏齿笑
-    - laugh 大笑
+    - laugh [læf] 大笑
 - store
     - vt. 储存，贮藏 n. 商店
     - 储存
@@ -79,13 +79,13 @@
     - adj. 某一个，确定的 pron. 某些
     - cert- 搞清
         - certify [ˈsɜːrtɪfaɪ] 证明，证实
-        - certificate n. 证书，文凭
+        - certificate [sərˈtɪfɪkət] n. 证书，文凭
     - certainly adv. 确定，无疑
     - certainty n. 确定性，必然的事
 - air
     - n. 空气；天空；神态;
     - 神态,气场
-        - He is a musician with the air of kindness. 他是个和善的音乐家
+        - He is a musician([mjuˈzɪʃn]) with the air of kindness. 他是个和善的音乐家
 - anyone
 - cancer [ˈkænsər]
     - n. 癌症；
@@ -116,6 +116,7 @@
 - wrong
     - adj. 错误的，vt. 冤枉
     - wrongly adv. 不公正的，不道德的，错误的
+    - worry v. （使）担心，发愁; 烦扰; 攻击 n. 担心，发愁; 烦心事
 - cut
 - fill
 - homework
@@ -151,7 +152,7 @@
     - loot v.抢劫
 - warm
     - adj. 温暖的；热情的；（色调）暖的；v. 使暖起来
-    - warmth n.温暖
+    - warmth n. 温暖
 - experiment  [ɪkˈsperɪmənt]
     - n. 实验; 试用
     - experience [ɪkˈspɪriəns] n. 经验; 经历; 往事 v. 经历; 感受
@@ -199,7 +200,7 @@
         - Journalists([ˈdʒɜːrnəlɪst] n. 记者) can make political([pəˈlɪtɪkl]) stories.
 - bird
     - n. 鸟；禽
-    - rare bird 表示少有的人，奇葩
+    - rare([rer] adj. 稀少的，罕见的 ) bird 表示少有的人，奇葩
     - an odd bird 一个怪人
     - early bird 捷足先登的人
 - head
@@ -227,7 +228,7 @@
         - while still <u>catching up</u> in some spheres([sfɪr]) of modern life... 在现代生活的某些领域仍在努力追赶
 - colleague [ˈkɑːliːɡ]
     - n. 同事
-    - college
+    - college [ˈkɑːlɪdʒ]
 - easily
 - exercise [ˈeksərsaɪz]
     - n. 锻炼，练习
@@ -308,7 +309,7 @@
     - n. 样貌；方面
     - First，scientific work(研究) <u>tends to(往往)</u> focus on some aspect of prevailing(盛行的) knowledge...
     - facade [fəˈsɑːd] n. 外表; 虚伪，假象
-        - Facade Pattern 门面模式
+        - Facade Pattern([ˈpætərn]) 门面模式
 - farm
     - n. 农场
     - farmer n. 农场主，农民
@@ -351,6 +352,7 @@
 - near
     - adv. 近，在近处（可以指时间，空间，程度）
     - nearly adv. 几乎，差不多
+    - nearby adj. 附近的； adv. 在附近
 - net
     - n. 网； vt. **净赚**； adj. 净的，纯的(remaining after all deductions(扣除))
     - 净赚（扣除所有成本）
@@ -403,7 +405,7 @@
         - see 强调看到的结果
         - watch 强调看的过程
     - watcher n. ...观察家
-        - star watcher 明星观众
+    - star watcher 明星观众
 - wonder
     - v. 对...感到疑惑； n. 惊异；奇迹
     - 疑惑，惊异
