--- a/english/word/simple-word/markdown/p45-p47.md
+++ b/english/word/simple-word/markdown/p45-p47.md
@@ -2,7 +2,7 @@
 
 - evenly
     - adv. 均匀地；有规律地；平滑地
-- honestly
+- honestly [ˈɑːnɪstli]
     - adv. 诚实地；正当地
 - comic [ˈkɑːmɪk]
     - adj. 喜剧的； n. 喜剧演员
@@ -29,7 +29,7 @@
     - excited
 - tower [ˈtaʊər]
     - n. 塔，高楼
-- lumber
+- lumber [ˈlʌmbər] 
     - n. 木材； vi. 缓慢移动
 - gut [ɡʌt] 
     - n. 勇气；内脏； vt. 取出内脏； adj. 本能的
@@ -68,7 +68,7 @@
     - n. **精华**；奶油，奶油食品；乳霜
     - The cream of their wit(机智), style, beauty, intellect and lifestyles.
     - ice-cream
-- daughter
+- daughter [ˈdɔːtər]
 - yell [jel]
     - vi./n. 大叫，叫喊
 - weekend
@@ -145,6 +145,8 @@
     - pride: take pride in 以...为豪
 - kindness
     - n. 仁慈
+- goodness
+  - n. 善良，美德，好意
 - runway
     - n. 飞机跑道
 - organ [ˈɔːrɡən]
@@ -301,8 +303,6 @@
     - You are going to host a club reading session.
     - sit + question
     - meeting (非正式)会议
-- goodness
-    - n. 善良，美德，好意
 - sexual [ˈsekʃuəl]
     - adj. 性行为的，性的
 - frankly
