update: generate-forgetting-curve-with-task-duration html

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -69,7 +69,7 @@ Dear Professor Cook,<br>
 recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
 &emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the
 Forbidden City, was the imperial(皇帝的) palace of the Ming and Qing Dynasties. It is also the largest piece of ancient
-Chinese architecture currently existing. MeanWhile, the Great Wall, symbolizing China's ancient civilization, is one of
+Chinese architecture currently existing. Meanwhile, the Great Wall, symbolizing China's ancient civilization, is one of
 the world's most renowned projects. As the great creation of the ancient Chinese people and one of the wonders of the
 world, it was listed as one of the world cultural heritage sites in 1987.<br>
 &emsp;&emsp;&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your
