--- a/math/linear_algebra/matrix.tex
+++ b/math/linear_algebra/matrix.tex
@@ -41,7 +41,7 @@
 
     \begin{enumerate}
         \item $m$行$n$列表格称为$m \times n$矩阵，当 $m = n$ 时，矩阵$A$称为$n$阶矩阵或\textbf{$n$阶方阵}
-        \item 如果一个矩阵的所有元素都是$0$，则称这个矩阵是\textbf{零矩阵}，可简记为$O$
+        \item 如果一个矩阵的所有元素都是$0$，则称这个矩阵是\textbf{零矩阵}，可简记为$\mathbf{O}$
         \item 两个$m \times n$型矩阵$A = [a_{ij}]$，$B = [b_{ij}]$，如果对应的元素都相等，即$a_{ij} = b_{ij}(i = 1,2,\dots,m; j = 1,2,\dots,n)$，则称矩阵$A$与$B$相等，记作$A = B$
         \item $n$阶方阵$A = [a_{ij}]_{n \times n}$的元素所构成的行列式称为$n$阶方阵$A$的行列式，记作$|A|$或$\det A$
         \item 把矩阵$A$的行换成同序数的列得到一个新矩阵，称为矩阵$A$的\textbf{转置矩阵}，记作$A^T$
@@ -72,17 +72,21 @@
             \item $E_{ij}$ 单位矩阵互换$i,j$行
             \item $E_{ij}(k)$ 单位矩阵第$j$行的$k$倍加至第$i$行
         \end{enumerate}
-        \item 设 $A$ 是 $n$ 阶矩阵，满足 $AA^{T} = A^{T}A = E$，称 $A$ 是 \textbf{正交矩阵}：
         \item 设$\alpha = (a_1, a_2, \dots, a_n)^{T}$，$\beta = (b_1, b_2, \dots, b_n)^{T}$。向量内积：$(\alpha, \beta) = \alpha^{T}\beta = \beta^{T}\alpha = a_{1}b_{1} + a_{2}b_{2} + \dots + a_{n}b_{n}$
+        \item 设 $A$ 是 $n$ 阶矩阵，满足 $AA^{T} = A^{T}A = E$，称 $A$ 是 \textbf{正交矩阵:}
         \begin{align*}
-            &\Leftrightarrow\; a_{1}^2 + a_{2}^2 + \dots + a_{n}^2 = 1 \\
-            &\Leftrightarrow\; a_ \\
             &\Leftrightarrow\; A^{T} = A^{-1} \\
             &\Leftrightarrow\; A \text{ 的行（列）向量两两正交（单位向量）} \\
             &\Leftrightarrow\; A \text{ 的每个行（列）向量长度均为1} \\
             &\Leftrightarrow\; A \text{ 的行（列）向量平方和为 1} \\
+            &\Leftrightarrow\; a_{1}^2 + a_{2}^2 + \dots + a_{n}^2 = 1 \\
             &{\color{red}{\Rightarrow}}\; |A|^{2} = 1 \;\;\Leftrightarrow\;\; |A| = 1 \text{ 或 } |A| = -1
         \end{align*}
+        \item 若 $A$ 是正交矩阵且 $A = (\alpha_1,\alpha_2,\dots,\alpha_n)$，则:
+        \begin{enumerate}
+            \item $\alpha_{i}^{T}\alpha_{i} = 1$
+            \item $\alpha_{i}^{T}\alpha_{j} = 0 \; (i \neq j)$
+        \end{enumerate}
     \end{enumerate}
 
     \subsection{定理}
@@ -91,7 +95,7 @@
         \item 若$A$是可逆矩阵，则矩阵$A$的逆矩阵\textbf{唯一}，记为$A^{-1}$
         \item $n$ 阶矩阵$A$可逆
         \begin{align*}
-            &\Leftrightarrow\; |A| = 0  \\
+            &\Leftrightarrow\; |A| \neq 0  \\
             &\Leftrightarrow\; r(A) = n  \\
             &\Leftrightarrow\; A \text{的列（行）向量组线性无关}  \\
             &\Leftrightarrow\; A = P_{1}P_{2}\dots P_{s}, P_{i}(i = 1,2,\dots,s)\text{是初等矩阵}  \\
@@ -99,14 +103,14 @@
             &\Leftrightarrow\; 0\text{不是矩阵} A \text{的特征值}  \\
         \end{align*}
         \item 若$A$是$n$阶矩阵，且满足$AB = E$，则必有$BA = E$
-        \item 用初等矩阵$P$左(右)乘矩阵$A$，其结果$PA$($AP$)就是对矩阵$A$作一次相应的初等行(列)变换
+        \item 用初等矩阵$P$左(右)乘矩阵$A$，其结果$PA$($AP$)就是对矩阵$A$作一次相应的初等行(列)变换 \Rightarrow \textbf{左乘行变换，右乘列变换}
         \item 初等矩阵均可逆，其逆矩阵是同类型的初等矩阵，即
 
         \renewcommand{\arraystretch}{1.2}  % 行高放大 1.2 倍
         \begin{tabularx}{\textwidth}{l c >{\raggedright\arraybackslash}X}
             倍乘 & $E_i^{-1}(k) = E_i(1/k)$      & 第 $i$ 行（或列）乘以非零常数 $k$ 的逆矩阵是第 $i$ 行（或列）乘以 $1/k$                     \\
-            倍加 & $E_{ij}^{-1}(k) = E_{ij}(-k)$ & 第 $i$ 行（或列）加上 $k$ 倍第 $j$ 行（或列）的逆矩阵是第 $i$ 行（或列）加上 $-k$ 倍第 $j$ 行（或列） \\
             互换 & $E_{ij}^{-1} = E_{ij}$        & 交换第 $i$ 行（或列）和第 $j$ 行（或列）的逆矩阵是其本身                                  \\
+            倍加 & $E_{ij}^{-1}(k) = E_{ij}(-k)$ & 第 $i$ 行（或列）加上 $k$ 倍第 $j$ 行（或列）的逆矩阵是第 $i$ 行（或列）加上 $-k$ 倍第 $j$ 行（或列） \\
         \end{tabularx}
         \item 矩阵$A$与$B$\textbf{等价}的充分必要条件是存在可逆矩阵$P$与$Q$，使$PAQ = B$
         \item 秩$r(A) = A \text{的列秩} = A \text{的行秩}$
@@ -118,12 +122,12 @@
     \begin{enumerate}
         \item 设$A = [a_{ij}]$，$B = [b_{ij}]$是两个$m \times n$矩阵，则$m \times n$矩阵$C = [c_{ij}] = [a_{ij} + b_{ij}]$称为矩阵$A$与$B$的和，记作$A + B = C$
         \item 设$A = [a_{ij}]$是$m \times n$矩阵，$k$是一个常数，则$m \times n$矩阵$[ka_{ij}]$称为数$k$与矩阵$A$的\textbf{数乘}，记作$kA$
-        \item 设$A, B, C, O$都是$m \times n$矩阵，$k, l$是常数，则矩阵的加法和数乘运算满足：
+        \item 设$A, B, C, \mathbf{O}$都是$m \times n$矩阵，$k, l$是常数，则矩阵的加法和数乘运算满足：
         \begin{enumerate}
             \item $A + B = B + A$
             \item $(A + B) + C = A + (B + C)$
-            \item $A + O = A$
-            \item $A + (-A) = O$
+            \item $A + \mathbf{O} = A$
+            \item $A + (-A) = \mathbf{O}$
             \item $1A = A$
             \item $k(lA) = (kl)A$
             \item $k(A + B) = kA + kB$
@@ -131,7 +135,7 @@
         \end{enumerate}
         \item 设$A = [a_{ij}]$是$m \times n$矩阵，$B = [b_{ij}]$是$n \times s$矩阵，那么$m \times s$矩阵$C = [c_{ij}]$，其中
         \[
-            c_{ij} = a_{i1}b_{1j} + a_{i2}b_{2j} + \dots + a_{in}b_{nj} = \sum_{k=1}^{n} a_{ik}b_{kj}
+            c_{ij} = a_{i1}b_{1j} + a_{i2}b_{2j} + \dots + a_{in}b_{nj} = \sum_{k=1}^{n} a_{ik}b_{kj} = \sum \text{第$i$行} \times \text{第$j$列}
         \]
         称为$A$与$B$的\textbf{乘积}，记作$C = AB$
         \item 矩阵乘法有下列法则：
@@ -141,7 +145,7 @@
             \item $(A + B)C = AC + BC$
             \item $(kA)(lB) = klAB$
             \item $AE = EA = A$
-            \item $OA = AO = O$
+            \item $\mathbf{O}A = A\mathbf{O} = \mathbf{O}$
         \end{enumerate}
         \item 设$A$是$n$阶矩阵，$k$是正整数，
         \begin{enumerate}
@@ -200,8 +204,8 @@
         \end{enumerate}
         \item 设$\alpha$和$\beta$都是列向量，则
         \begin{enumerate}
-            \item $\alpha\beta^T = (\beta\alpha^T)^T$，两者都是$n$阶矩阵（互为转置）
-            \item $\alpha^T\beta = \beta^T\alpha$ 是一个\textbf{数}
+            \item 列向量 \cdot \text{行向量:} \, $\alpha\beta^T = (\beta\alpha^T)^T$，两者都是$n$阶矩阵（互为转置）
+            \item 行向量 \cdot \text{列向量:} \, $\alpha^T\beta = \beta^T\alpha$ 是一个\textbf{数}
             \item
             \[
                 \alpha\alpha^T =
@@ -222,6 +226,16 @@
 
     \subsection{公式}
 
+    \subsubsection{行列式}
+
+    \begin{enumerate}
+        \item $|A^T| = |A|$
+        \item $|kA| = k^{n}|A|$
+        \item $|AB| = |A||B|$ \;\text{,} $|A^2| = |A|^2$
+        \item $|A^*| = |A|^{n-1}$
+        \item $|A^{-1}| = |A|^{-1}$
+    \end{enumerate}
+
     \subsubsection{转置}
 
     \begin{enumerate}
@@ -241,17 +255,17 @@
         \item $(ABC)^{-1} = C^{-1}B^{-1}A^{-1}$
         \item $(A^n)^{-1} = (A^{-1})^n$
         \item $(A^{-1})^T = (A^T)^{-1}$
-        \item $|A^{-1}| = \frac{1}{|A|} \Rightarrow |p^{-1}||P| = 1$
         \item $A^{-1} = \frac{1}{|A|}A^{*}$
+        \item $|A^{-1}| = \frac{1}{|A|} \Rightarrow |P^{-1}||P| = 1$
     \end{enumerate}
 
     \subsubsection{伴随}
 
     \begin{enumerate}
+        \item $(A^*)^{-1} = (A^{-1})^* = \frac{1}{|A|}A$
         \item $AA^{*} = A^{*}A = |A|E$
         \item $A^{*} = |A|A^{-1}$
         \item $|A^*| = |A|^{n-1}$
-        \item $(A^*)^{-1} = (A^{-1})^* = \frac{1}{|A|}A$
         \item $(AB)^* = B^{*}A^*$
         \item $(A^*)^T = (A^T)^*$
         \item $(kA)^* = k^{n-1}A^*$
@@ -289,7 +303,7 @@
         \item $r(A + B) \le r(A, B) \le r(A) + r(B)$
         \item $A$是$m \times n$矩阵，$B$是$n \times s$矩阵，则
         \begin{enumerate}
-            \item $r(AB) \le r(A) \land r(AB) \le r(B)$，即 $r(AB) \le \min(r(A), r(B))$
+            \item $r(AB) \le r(A) \text{并且} r(AB) \le r(B)$，即 $r(AB) \le \min(r(A), r(B))$
             \item $r(A) + r(B) - n \le r(AB)$
             \item 且$AB = O$，则
             \begin{enumerate}
@@ -309,7 +323,7 @@
             \end{enumerate}
             \item 且$AB = C$，则
             \begin{enumerate}
-                \item {\color[rgb]{0.2, 0.6, 0.3}{矩阵$AB$的行向量$\alpha_1, \alpha_2, \dots, \alpha_n$可由$B$的行向量$\beta_1, \beta_2, \dots, \beta_n$线性表出}}
+                \item {\color[rgb]{0.2, 0.6, 0.3}{矩阵$C(AB)$的行向量$\alpha_1, \alpha_2, \dots, \alpha_n$可由$B$的行向量$\beta_1, \beta_2, \dots, \beta_n$线性表出}}
                 \begin{itemize}
                     \item 对 $B$，$C$ 按列分块，有
                     \[
@@ -337,7 +351,7 @@
                         \end{cases}
                     \]
                 \end{itemize}
-                \item {\color[rgb]{0.2, 0.6, 0.3}{矩阵$AB$的列向量可由$A$的列向量线性表出}}
+                \item {\color[rgb]{0.2, 0.6, 0.3}{矩阵$C(AB)$的列向量可由$A$的列向量线性表出}}
             \end{enumerate}
         \end{enumerate}
         \item 若$A$可逆，则$r(AB) = r(B) = r(BA)$
@@ -413,8 +427,6 @@
                 \end{bmatrix}
             \]
         \end{enumerate}
-        \item $A$是$m \times n$矩阵，$B$是$n \times s$矩阵，且
-        \item $A$是$m \times n$矩阵，$B$是$n \times s$矩阵，$C$是$s \times t$矩阵，则
     \end{enumerate}
 
     \subsubsection{特殊矩阵$n$次方}
