--- a/english/word/simple-word/markdown/p15-p17.md
+++ b/english/word/simple-word/markdown/p15-p17.md
@@ -6,7 +6,7 @@
 - educate
     - vt. 教育，培养
     - educator n. 教育家
-- minute
+- minute [ˈmɪnɪt]
     - n. 分钟；一会；立刻；（pl.）会议记录
     - 会议记录
         - He'd been reading the **minutes** of the last meeting.
@@ -26,15 +26,17 @@
     - wealthy
         - A few wealthy people will own all the capital(资本).
 - alone
-    - all + one
     - adj./adv. 单独的，孤独的
+    - all + one
     - Washington alone has the power. 只有华盛顿才有权力
+    - along prep. 沿着
 - clean
 - continent [ˈkɑːntɪnənt]
     - n. 大陆，洲
     - the Old Continent 欧洲大陆
-- dam
+- dam [dæm]
     - n. 堤，坝
+    - damn [dæm] adj. 该死的，可恶的（消极）； adv. 非常
 - finally
     - adv. 最后，终于
     - fin- 结束
@@ -50,7 +52,7 @@
 - phrase [freɪz]
     - n. 短语
     - The phrase "flagged up" is the closest in meaning to... 短语“flagged up”在意思上最接近于...
-    - phase [freɪz] n. 阶段; 时期
+    - phase [feɪz] n. 阶段; 时期
 - player
     - n. 游戏者；运动员
 - post
@@ -65,7 +67,7 @@
         - It would post a challenge to its <u>farming industry(农业产业)</u>.
     - 邮递
         - I'll send the original(起源的) to you by post.
-    - postal adj. 邮政的，邮递的
+    - postal [ˈpoʊstl] adj. 邮政的，邮递的
 - room
     - n. 空间
     - .. allow publishers some room to make money.
@@ -171,7 +173,7 @@
     - n. 邮件
 - match
     - n. 匹配，比赛
-    - Few culinary([ˈkʌlɪneri] 否、烹饪的) pleasures can match it. 很少有美食能与之媲美
+    - Few culinary([ˈkʌlɪneri] 否、烹饪的) pleasures([ˈpleʒər]) can match it. 很少有美食能与之媲美
 - root
     - n. 根部 v. 生根
     - take root in 扎根于
@@ -222,6 +224,7 @@
         - bullet [ˈbʊlɪt] 子弹
     - dietary adj. 与饮食相关的，饮食的
     - Mr.Song has studied the <u>diet/dietary</u> habits of 50000 men.
+    - poet [ˈpoʊət] n. 诗人
 - double
     - adj. 双倍的，双重的
     - di- 两个
@@ -377,7 +380,7 @@
     - vt. 使高兴
     - Be easily pleased
     - pleasure [ˈpleʒər] n. 高兴，愉悦
-        - Happiness is <u>more than(+n. 不仅仅)</u> pleasure without pain. 幸福不仅仅是没有痛苦的快乐
+        - Happiness is <u>more than(+n. 不仅仅)</u> pleasure([ˈpleʒər]) without pain. 幸福不仅仅是没有痛苦的快乐
     - pleasant adj. 愉悦的
         - He had such a pleasant, readable style. 他的写作风格令人愉快，读起来很有趣
     - pleasurable adj. 愉快的
@@ -410,6 +413,7 @@
         - vacuum n. 真空，v. 用真空吸尘器清扫
     - n. 浪费
         - Many jobs are boring，unhealthy，and a waste of human potential([pəˈtenʃl] n. 潜力).
+    - taste n. 味道; 味觉; 一小口; 体验; 品味; 爱好 v. 尝出/有…味道; 品尝
 - whom
 - wish
     - vt. 希望，愿望（实现的可能性小）
