--- a/english/word/simple-word/markdown/p21-p23.md
+++ b/english/word/simple-word/markdown/p21-p23.md
@@ -176,7 +176,7 @@
     - unusually adv. 特别地，极，非常
 - winter
     - n. 冬季
-- pleasure
+- pleasure [ˈpleʒər]
     - n. 高兴，愉快
     - Happiness is <u>more than pleasure</u> without pain.
         - more than + n. 不仅仅
