--- a/english/word/simple-word/markdown/p39-p41.md
+++ b/english/word/simple-word/markdown/p39-p41.md
@@ -258,7 +258,7 @@
     - adj. 有毒的
 - harvest [ˈhɑːrvɪst]
     - n. 收获，收成
-    - ...individuals can use the money to supplement their harvests.
+    - ...individuals can use the money to supplement([ˈsʌplɪmənt]) their harvests.
 - buzz [bʌz]
     - vi. 发出嗡嗡声；忙乱
     - buzzword 流行话；时髦用语
