--- a/math/linear_algebra/determinant.tex
+++ b/math/linear_algebra/determinant.tex
@@ -46,7 +46,7 @@
         \item 两行成比例 $\Rightarrow$ 行列式的值为 0
         \item 某行（列）有公因数 $k$，可把 $k$ 提到行列式外
         \item 两行互换，行列式变号
-        \item \textbf{某行} 所有元素都是两个数的和，则可写成两个行列式之和
+        \item {\color{red}{\textbf{某行}}}所有元素都是两个数的和，则可写成两个行列式之和
         \item 某行的 $k$ 倍加至另一行，行列式的值不变
     \end{enumerate}
 
