feat: add 017 write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -229,6 +229,18 @@ caused. Please excuse me for not being able to inform you of my situation sooner
 <p align="right">Your sincerely,</p>
 <p align="right">Li Ming</p>
 
+## 017
+
+Dear Sir or Madam,<br>
+&emsp;&emsp;&emsp;&emsp;I'm writing the note to apply for the job of teaching your daughter Chinese online.<br>
+&emsp;&emsp;&emsp;&emsp;I am sure that I am the suitable for this position for several reasons. Firstly, I graduated from Peking University with a bachelor's degree. Enclosed with this note is my resume, which details my previous academic qualifications. Secondly, I have been teaching kids from 8 to 12 years old since I entered college. Not only do my qualifications and experences make me a prefect candidate, but my cheerful personality is also well suited to work as a native tutor. Lastly, I am available every Sunday from 2 p.m. to 6 p.m.<br>
+&emsp;&emsp;&emsp;&emsp;If you could grant me an interview, I would appreciate it.
+
+<p align="right">Yours sincerely,</p>
+<p align="right">Li Ming</p>
+
+
+
 <p align="right"></p>
 <p align="right"></p>
 
