--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -38,7 +38,7 @@ worthwhile and enhance your whole life. Hope you like it here.<br>
 ## 004
 
 Dear Sir or Madam,<br>
-&emsp;&emsp;&emsp;&emsp;I bought an electronic dictionary from your online shore on January 1st, but after using it for
+&emsp;&emsp;&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for
 a short period of time, I found it has some problems.<br>
 &emsp;&emsp;&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need
 to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary **are** so
@@ -65,13 +65,8 @@ competitor.<br>
 ## 006
 
 Dear Professor Cook,<br>
-&emsp;&emsp;&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to
-recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
-&emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the
-Forbidden City, was the imperial(皇帝的) palace of the Ming and Qing Dynasties. It is also the largest piece of ancient
-Chinese architecture currently existing. Meanwhile, the Great Wall, symbolizing China's ancient civilization, is one of
-the world's most renowned projects. As the great creation of the ancient Chinese people and one of the wonders of the
-world, it was listed as one of the world cultural heritage sites in 1987.<br>
+&emsp;&emsp;&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
+&emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the Forbidden City, was the imperial palace of the Ming and Qing Dynasties. **It is also the largest piece of ancient Chinese architecture currently existing.** Meanwhile, the Great Wall, symbolizing China's ancient civilization, **is one of the world's most renowned projects**. **As the great creation of the ancient Chinese people and one of the wonders of the world**, it was listed as one of the world cultural heritage sites in 1987.<br>
 &emsp;&emsp;&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your
 stay in our city.<br>
 <p align="right">Yours sincerely,</p>
